# uvicorn-fastapi-docker

./: .dockerignore  .pylintrc  README.md  docker-compose.yml  docker-entrypoint.sh  dockerfile  pyproject.toml
.github/workflows/: pylint.yml
app/: main.py
app/templates/: index.html
app/templates/css/: styles.css
